# f3d

./: CMakeLists.txt  CONTRIBUTING.html  LICENSE.html  _licenses.html  index.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/wasm-ci/: action.yml
.github/workflows/: ci.yml
assets/css/: just-the-docs-dark.css  just-the-docs-default.css  just-the-docs-light.css
assets/js/: just-the-docs.js  search-data.json
cmake/: testing.cmake
doc/: CHANGELOG.html  GALLERY.html  THIRD_PARTY_LICENSES.html
doc/dev/: BUILD.html  BUILD_WASM.html  CODING_STYLE.html  GENERATE.html  GETTING_STARTED.html  README_DEV.html  TESTING.html
doc/libf3d/: BINDINGS.html  CLASSES.html  LANGUAGE_BINDINGS.html  OPTIONS.html  OVERVIEW.html  PLUGINS.html  README_LIBF3D.html
doc/user/: COLOR_MAPS.html  COLOR_MAPS.md  CONFIGURATION_FILE.html  DESKTOP_INTEGRATION.html  INSTALLATION.html  INTERACTIONS.html  LIMITATIONS_AND_TROUBLESHOOTING.html  OPTIONS.html  QUICKSTART.html  README_USER.html  SUPPORTED_FORMATS.html  USAGE.html
doc/wasm/: f3d.data  f3d.js  index.html
examples/libf3d/cpp/in-situ/: CMakeLists.txt  main.cxx
plugins/: CMakeLists.txt
plugins/gasp/: CMakeLists.txt
plugins/gasp/module/: CMakeLists.txt  vtk.module  vtkF3DGaussianSplattingReader.cxx  vtkF3DGaussianSplattingReader.h
plugins/pdal/: CMakeLists.txt
python/: F3DPythonBindings.cxx
vtkext/private/module/: vtkF3DMemoryMesh.cxx  vtkF3DMemoryMesh.h  vtkF3DRenderPass.cxx  vtkF3DRenderer.cxx
wasm/: f3d.js
web/: f3d.js
webassembly/: CMakeLists.txt  example.html
